<resources>
    <string name="app_name">Kanban Online</string>
    <string name="background_image_cdesc">Imagem de Fundo</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="name">Nome Completo</string>
    <string name="register">Cadastrar</string>
    <string name="signin">Entrar</string>
    <string name="login"><u>Login</u></string>
    <string name="filter_title_kanban">filter_title_kanban</string>
    <string name="try_again_login">Ocorreu um erro ao fazer login. Por favor, tente novamente.</string>
    <string name="create_board">Criar Board</string>
    <string name="boardName">Nome do Board</string>
    <string name="numberBoard">Escolha o número de seções do Board</string>
    <string name="nameSectionBoard">Nome da seção</string>
    <string name="descriptionSectionBoard">Ao escolher uma opção, irá aparecer os campos para prencher o nome das seções</string>
    <string name="titleSectionBoard">Nome das seções do Board</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">seuemail@cwi.com.br</string>
    <string name="action_settings">Configurações</string>
    <string name="enter_section_name">Enter section name</string>
    <string name="logout">Sair</string>
    <string name="save">Salvar</string>
    <string name="new_board">Criar Board</string>
    <string name="join_board">Juntar-se ao Board</string>
    <string name="joinBoardButton">Juntar-se</string>
    <string name="resources">Ferramentas</string>
    <string name="about_info">Sobre</string>
    <string name="about">Sobre</string>
    <string name="create_title">Criar</string>
    <string name="board_create_success">O board foi criado com sucesso!</string>
    <string name="board_create_fail">Não foi possível criar o board!</string>
    <string name="board_loaded">Boards carregados!</string>
    <string name="created_by">Criado por %1$s</string>
    <string name="created_at">Criado em %1$s</string>
    <string name="hashBoard">Código do Board</string>
    <string name="hashBoardDescription">Insira aqui o código para se juntar ao Board</string>
    <string name="join_board_success">Board encontrado!</string>
    <string name="board_not_found">Houve uma falha, o Board não foi encontrado!</string>
    <string name="join_board_fail">Board não encontrado. Digite novamente o código.</string>
    <string name="anon_board">Board Anônimo</string>
    <string name="share_key_of_board">Compartilhe a chave de entrada do seu board!</string>
    <string name="board_title">Board</string>
    <string name="section_number">1/5</string>
    <string name="placeholder">Placeholder</string>
    <string name="clipboard_copied">A chave foi copiada</string>
    <string name="close">Fechar</string>
    <string name="copy">Clique no botão de COPIAR para copiar automaticamente sua chave.</string>
    <string name="create_post">Criar Post</string>
    <string name="descriptionSection">Descrição do Post</string>
</resources>
