<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn="navigation_view">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_new_board"
        android:icon="@drawable/ic_assignment"
        android:title="@string/new_board" />
    <item
        android:id="@+id/nav_join_board"
        android:icon="@drawable/ic_assignment_ind"
        android:title="@string/join_board" />
    <item
        android:id="@+id/nav_ferramentas"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/resources" />
</group>

<item android:title="@string/about_info">
    <menu>
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </menu>
</item>

</menu>
