<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="155dp">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#ededed"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:text="@string/create_post"
                android:textAlignment="center"
                android:textColor="@color/primaryText"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="@font/quicksand_bold" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/descriptionPostInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/secondaryText"
            android:theme="@style/InputLayoutDark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/descriptionPostEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descriptionSection"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/secondaryText"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/cratePostButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/create_title"
            android:textColor="@android:color/white" />

    </LinearLayout>
</RelativeLayout>