<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.JoinBoardActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/joinBoardToolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/join_board"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <!--Imagem do Board-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginStart="26dp"
            app:srcCompat="@drawable/ic_board_green" />

        <!--Titulo-->
        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/join_board"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="34sp" />

    </LinearLayout>

    <!--Código do board-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/hashBoardDescription"
        android:textSize="20sp"
        android:layout_marginTop="26dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/hashBoardInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColorHint="@color/secondaryText"
        android:theme="@style/InputLayoutDark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/hashBoardEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hashBoard"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/secondaryText" />
    </android.support.design.widget.TextInputLayout>

    <!--Botão Cadastrar-->
    <Button
        android:id="@+id/joinBoardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="20dp"
        android:text="@string/joinBoardButton"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>