<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.CreateBoardActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/createBoardToolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/create_board"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/saveBoardButton"
            android:layout_marginEnd="10sp"
            android:layout_gravity="end"
            android:src="@drawable/ic_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!--Imagem do Board-->
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="140dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="26dp"
                    app:srcCompat="@drawable/ic_board_green" />

                <!--Titulo-->
                <TextView
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/create_board"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="36sp" />

            </LinearLayout>


            <!--Nome do board-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameBoardInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColorHint="@color/secondaryText"
                android:theme="@style/InputLayoutDark">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameBoardEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/boardName"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/secondaryText" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/anonBoardCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="11dp"
                android:paddingEnd="16dp"
                android:paddingStart="0dp"
                android:text="@string/anon_board"
                android:textColor="@color/secondaryText"
                android:textSize="16sp" />

            <!--Numero de seções do board-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/numberBoard"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/descriptionSectionBoard"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/numberSectionsSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <LinearLayout
                android:id="@+id/nameSectionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>