<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="155dp">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#ededed"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10sp"
                android:src="@drawable/ic_share_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:text="@string/share_key_of_board"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                app:fontFamily="@font/abel" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abel"
            android:paddingBottom="5dp"
            android:text="@string/copy"
            android:textAlignment="center"
            android:textColor="@color/secondaryText"
            android:textSize="10sp"
            app:fontFamily="@font/unna" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">


            <Button
                android:id="@+id/btnCopyId"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_content_copy"
                android:textAllCaps="false"
                android:textColor="@android:color/primary_text_dark" />

            <TextView
                android:id="@+id/keyOfBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_copy_key"
                android:padding="10dp"
                android:text="@null" />
        </RelativeLayout>


        <Button
            android:id="@+id/closeShareBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/close"
            android:textColor="@android:color/white" />

    </LinearLayout>
</RelativeLayout>