<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/sectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/boardInfo"
                android:fontFamily="@font/abel"
                android:text="@string/nameSectionBoard"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sectionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/sectionTitle"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:fontFamily="@font/abel"
                android:text="@string/section_number"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/boardInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/boardName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/abel"
                    android:text="@string/created_by"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/boardCreatedBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abel"
                    android:text="@string/created_by"
                    android:textSize="10sp" />

            </LinearLayout>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            android:background="@drawable/background_board">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/postRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="6dp"
                android:scrollbars="vertical"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
                app:spanCount="2" />

        </FrameLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add" />

</RelativeLayout>